# pearl-sdk

./: .gitignore  README.md
sdk-python/: README.md  pyproject.toml  requirements-dev.txt  setup.py
sdk-python/examples/: chat_completion_example.py  webhook_management_example.py  webhook_signature_verification_example.py
sdk-python/pearl_sdk/: __init__.py  client.py  types.py
sdk-python/pearl_sdk/core/: __init__.py  retry_policy.py
sdk-python/pearl_sdk/resources/: __init__.py  chat.py  webhooks.py
sdk-python/pearl_sdk/utils/: __init__.py  signature_utils.py
sdk-python/tests/: conftest.py  test_chat.py  test_retry_policy.py  test_signature_utils.py  test_webhooks.py
sdk-typescript/: README.md  jest.config.ts  package-lock.json  package.json  test-client.ts  test_webhook_register.ts  test_webhook_verification.ts  tsconfig.jest.json  tsconfig.json
sdk-typescript/examples/: chat-completion-example.ts  webhook-management-example.ts  webhook-signature-verification-example.ts
sdk-typescript/src/: index.ts  types.ts
sdk-typescript/src/core/: PearlClient.ts  RetryPolicy.ts
sdk-typescript/src/resources/: chat.ts  webhooks.ts
sdk-typescript/src/utils/: signature-utils.ts
sdk-typescript/test/: chat.test.ts  pearl-client.test.ts  retry-policy.test.ts  signature-utils.test.ts  webhooks.test.ts
